harness/test/errors/076_fn_keyword.eu
# Error test: using Rust's 'fn' keyword for function definition
# In eucalypt, use 'double(x): x * 2' instead
result: fn(42)
RESULT: result
